codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Feature flags
  Inspect and toggle feature flags. Changes are saved to config.toml.

› [ ] Ghost snapshots  Capture undo snapshots each turn.  [stable]
  [x] JavaScript REPL  Enable a persistent Node-backed JavaScript REPL.
                       [beta]

  Press space to select or enter to save for next conversation
