codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__remote_usage_duplicate_base_path_failure_history.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
■ Remote usage failed for provider `test-provider`: request.url duplicates provider base path; provider `base_url` already ends with `/codex/v1`. Use `{{baseUrl}}/usage` instead.
