codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__skill_used_event_history_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 9441
expression: combined
---
• Using skill: slides
