codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__su8_status_line_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: footer
---
› Ask Codex to do anything

  rem 12.35 USD · today 12.50 USD
